Mon Mar 18 16:57:20 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* common.make: If REMOVE_EMPTY_DIRS is yes, remove efficiently all
	empty directories from include and library flags (ie, -I and -L
	flags).	 (Suggestion by Markus Hitter <mah@jump-ing.de>).
	* target.make (REMOVE_EMPTY_DIRS): Set to yes in the case of OS X.

Mon Mar 18 14:07:53 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* GNUstep-reset.sh: New file.  Sourcing this file resets the
	environment from the GNUstep variables.  It can be used to switch
	LIBRARY_COMBO on the fly - you first reset the existing
	environment using this script, then export the new LIBRARY_COMBO,
	then source GNUstep.sh again.
	* GNUmakefile.in (install): Install GNUstep-reset.sh
	
Mon Mar 18 10:37:49 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Instance/test-library.make: Fixed typo, internal-test_lib-*
	targets were called internal-testlib-*.

2002-03-14  Adam Fedor  <fedor@gnu.org>

	* Version: 1.3.0
	* Documentation/README.MinGW: Minor formatting.
	* README, ANNOUNCE, GNUstep-HOWTO, ...: Regenerate.

2002-03-13  Adam Fedor  <fedor@gnu.org>

	* Documentation/gnustep-howto.texi: Update.
	* Documentation/install.texi: Likewise.
	* Documentation/news.texi: Likewise.
	* Documentation/readme.texi: Likewise.

2002-03-13 Richard Frith-Macdonald <rfm@gnu.org>

	* Documentation/README.MinGW: New content describing native MinGW build
	* Documentation/README.cygwin: Old contentnon cross-compiling to MinGW
	* fixpath.sh: Removed
	* fixpath.sh.in: new file
	* configure.in: generate fixpath.sh from fixpath.sh.in to control
	whether it fixes cygwin or mingw/msys style paths.

2002-03-11 Richard Frith-Macdonald <rfm@gnu.org>

	* cygpath.sh: Removed ... replaced by fixpath.sh which should handle
	either cygwin or mingw/msys paths.
	
2002-03-10 Richard Frith-Macdonald <rfm@gnu.org>

	* target.make: Force shared=yes for cygwin and mingw as stuff simply
	doesn't work under windows when built static.